<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="app1Title">spotify streamer</string>
    <string name="app2Title">scores app</string>
    <string name="app3Title">library app</string>
    <string name="app4Title">build it bigger</string>
    <string name="app5Title">bacon reader</string>
    <string name="app6Title">capstone: my own app</string>

    <string name="action_settings">Settings</string>
</resources>
