<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <TextView
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_title_material"
        android:paddingBottom="40dp"
        />

    <Button
        android:text="@string/app1Title"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="#F08C35"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="25dp"
        android:onClick="app1OnClick"
        />

    <Button
        android:text="@string/app2Title"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="#F08C35"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="25dp"
        android:onClick="app2OnClick"
        />

    <Button
        android:text="@string/app3Title"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="#F08C35"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="25dp"
        android:onClick="app3OnClick"
        />

    <Button
        android:text="@string/app4Title"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="#F08C35"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="25dp"
        android:onClick="app4OnClick"
        />

    <Button
        android:text="@string/app5Title"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="#F08C35"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="25dp"
        android:onClick="app5OnClick"
        />

    <Button
        android:text="@string/app6Title"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="#FF2222"
        android:textColor="#FFFFFF"
        android:onClick="app6OnClick"
        />

</LinearLayout>
